fixed overflow, font sizes are not working as expected. Look into this as well as styling the overlay tomorrow.

--- a/activity-6/css/styles.css
+++ b/activity-6/css/styles.css
@@ -151,8 +151,7 @@ This will be how messages are written and sent. It will hold...
 
 .msgBlock {
   width: 90%;
-  max-height: 30em;
-  overflow: auto;
+  max-height: 20em;
   background-color: hsla(0, 10%, 10%, 0.5);
   margin: 1em auto;
   padding: .5em;
@@ -163,20 +162,24 @@ This will be how messages are written and sent. It will hold...
   margin: 0;
   padding: 0;
   font-weight: bold;
-  font-size: 1em;
+  font-size: 16px;
 }
 
 /*This is the div within msgBlock to hold the actual message*/
 .msgArea {
+  max-height: 10em;
+  margin-bottom: 1em;
   text-align: left;
-  font-size: 1em;
+  font-size: 16px;
   color: white;
   overflow: auto;
+
 }
 
 /*these are for the reply button Container and the button itself.*/
 .replyContainer {
   width: 100%;
+  height:1.5em;
   background-color: transparent;
   text-align: right;
 }
@@ -190,6 +193,7 @@ This will be how messages are written and sent. It will hold...
   cursor: pointer;
   font-family: 'Exo', sans-serif;
   border-radius: 5px;
+  font-size: 1em;
 }
 
 .replyButton:hover {
